tests/NormalTests/paczka1/small_fuzzy/16260920.err
Error in line 2: L32VGkk A283 9,6
Error in line 7: zjC A247 96,4
Error in line 12: zjC S384 -1,8
